--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/yupao?serverTimezone=Asia/Shanghai
     username: root
-    password: Xfy13500731227
+    password: ******
   # session 失效时间（分钟）
   session:
     timeout: 86400
